--- a/LBP_Face_Detection.ipynb
+++ b/LBP_Face_Detection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,18 +106,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from imblearn.over_sampling import SMOTE\n",
-    "random = SMOTE(random_state=42)\n",
-    "X_train, y_train = random.fit_resample(X_train, y_train)"
+    "# from imblearn.over_sampling import SMOTE\n",
+    "# random = SMOTE(random_state=42)\n",
+    "# X_train, y_train = random.fit_resample(X_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +129,7 @@
        "RandomForestClassifier(random_state=42)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,14 +150,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 49.23857868020304\n"
+      "Accuracy: 52.79187817258884\n"
      ]
     }
    ],
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -177,17 +177,17 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.50      0.52      0.51        27\n",
-      "           1       0.33      0.55      0.41        11\n",
-      "           2       0.45      0.49      0.47        35\n",
-      "           3       0.50      0.40      0.44        15\n",
-      "           4       0.55      0.55      0.55        42\n",
-      "           5       0.41      0.41      0.41        17\n",
-      "           6       0.57      0.48      0.52        50\n",
+      "           0       0.63      0.44      0.52        27\n",
+      "           1       0.50      0.36      0.42        11\n",
+      "           2       0.50      0.69      0.58        35\n",
+      "           3       0.75      0.20      0.32        15\n",
+      "           4       0.49      0.60      0.54        42\n",
+      "           5       1.00      0.18      0.30        17\n",
+      "           6       0.52      0.66      0.58        50\n",
       "\n",
-      "    accuracy                           0.49       197\n",
-      "   macro avg       0.47      0.48      0.47       197\n",
-      "weighted avg       0.50      0.49      0.49       197\n",
+      "    accuracy                           0.53       197\n",
+      "   macro avg       0.63      0.45      0.46       197\n",
+      "weighted avg       0.58      0.53      0.51       197\n",
       "\n"
      ]
     }
@@ -199,14 +199,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Prediksi Kelas: disgust\n"
+      "Prediksi Kelas: surprise\n"
      ]
     }
    ],
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +253,7 @@
        "(-0.5, 63.5, 63.5, -0.5)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
